--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
   font-family: 'Poppins', 'sans-serif';
 }
 header {
+  position: relative;
   width: 100%;
   height: 100vh;
   background: url(img/bg-01.png);
@@ -16,6 +17,7 @@ header {
   background-size: 75%;
   background-position-x: right;
   background-position-y: bottom;
+  z-index: 99;
 }
 nav {
   display: flex;
@@ -24,7 +26,13 @@ nav {
   align-items: center;
   justify-content: space-between;
 }
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .logo {
+  margin-left: 10px;
   font-size: 2rem;
   font-family: 'Righteous', 'sans-serif';
   cursor: pointer;
@@ -48,12 +56,33 @@ nav button {
   font-weight: 600;
   border: none;
   border-radius: 40px;
-  background: linear-gradient(to right, #E65924, #FD9C28);
+  background-color: #E65924;
   cursor: pointer;
+  transition: all .3s ease;
+}
+nav button:hover {
+  background-color: #FD9C28;
+}
+.burger {
+  display: none;
+  width: 40px;
+  height: 40px;
+  padding: 9px 0 0 7px;
+  border-radius: 40px;
+  cursor: pointer;
+  background-color: #359169;
+}
+.bar {
+  display: block;
+  margin: 3px 0;
+  width: 25px;
+  height: 3px;
+  border-radius: 3px;
+  background-color: #fff;
 }
 .hero {
   height: 50vh;
-  padding: 40px 50px;
+  padding: 40px 50px 0 50px;
 }
 .hero h1 {
   width: 40%;
@@ -78,6 +107,10 @@ nav button {
   border-radius: 40px;
   background-color: #2B7656;
   cursor: pointer;
+  transition: all .3s ease;
+}
+.hero button:hover {
+  background-color: #359169;
 }
 section {
   background-color: #E6ECEA;
@@ -90,22 +123,17 @@ section {
   align-items: center;
 }
 .card-container .card:nth-child(1) {
-  width: 250px;
-  margin: 20px;
   padding: 20px 25px;
-  border-radius: 10px;
   background: linear-gradient(to right, #E65924, #FD9C28);
 }
+.card-container .card:hover:nth-child(1) {
+  box-shadow: 0 0 5px #111;
+}
 .card-container .card:nth-child(1) h4 {
-  width: 50%;
   margin-bottom: 60px;
-  font-size: 1.5rem;
-  font-weight: 600;
   color: #eee;
 }
 .card-container .card:nth-child(1) p {
-  margin-top: 5px;
-  font-size: .7rem;
   color: #eee;
 }
 .card-container .card {
@@ -195,6 +223,11 @@ section {
   border-radius: 40px;
   background: #eee;
   cursor: pointer;
+  transition: .3s ease;
+}
+.about-content button:hover {
+  color: #eee;
+  background: #E65924;
 }
 #services {
   width: 100%;
@@ -310,17 +343,23 @@ section {
   border-radius: 40px;
   background: #eee;
   cursor: pointer;
+  transition: .3s ease;
+}
+.side-card .content button:hover {
+  color: #eee;
+  background: #E65924;
 }
 #team {
   width: 100%;
   height: 103vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
 }
 .team-wrapper {
   display: flex;
+  margin: 20px 0;
   gap: 10px;
 }
 .team-wrapper .card {
@@ -333,10 +372,14 @@ section {
   background-color: #E6ECEA;
   border-radius: 10px;
   gap: 5px;
+  transition: .3s ease;
+}
+.team-wrapper .card:hover {
+  transform: translate(0, -3px);
+  box-shadow: 0 0 5px #E65924;
 }
 .team-wrapper .card img {
   width: 200px;
-  height: 200px;
   border: 4px solid #E65924;
   border-radius: 400px;
 }
@@ -351,6 +394,7 @@ section {
   margin: 10px;
   position: relative;
   color: #E65924;
+  cursor: pointer;
   z-index: 1;
   transition: .3s all ease;
 }
@@ -380,8 +424,11 @@ section {
   font-weight: 600;
   border: none;
   border-radius: 40px;
-  background: linear-gradient(to right, #E65924, #FD9C28);
+  background-color: #E65924;
   cursor: pointer;
+}
+#team button:hover {
+  background-color: #FD9C28;
 }
 #quote {
   width: 100%;
@@ -419,10 +466,11 @@ section {
 .quote-wrapper .card i::after {
   content: "";
   position: absolute;
-  padding: 40px;
+  width: 80px;
+  height: 80px;
   top: -20px;
   left: -23px;
-  border-radius: 40px;
+  border-radius: 80px;
   background: #eee;
   z-index: -1;
 }
@@ -456,8 +504,12 @@ section {
   font-weight: 600;
   border: none;
   border-radius: 40px;
-  background: linear-gradient(to right, #E65924, #FD9C28);
+  background: #E65924;
   cursor: pointer;
+  transition: .3s ease;
+}
+#quote button:hover {
+  background: #FD9C28;
 }
 #contact {
   display: flex;
@@ -490,14 +542,20 @@ form textarea {
   outline: 0;
   resize: none;
 }
+:is(input, textarea)::placeholder {
+  opacity: .4;
+}
 #contact button {
   padding: 6px 40px;
   color: #eee;
   font-weight: 600;
   border: none;
   border-radius: 40px;
-  background: linear-gradient(to right, #E65924, #FD9C28);
+  background: #E65924;
   cursor: pointer;
+}
+#contact button:hover {
+  background: #FD9C28;
 }
 footer {
   display: flex;
@@ -527,6 +585,7 @@ footer {
 .top i {
   position: relative;
   margin-left: 20px;
+  cursor: pointer;
   z-index: 1;
 }
 .top i::after {
@@ -557,10 +616,178 @@ footer {
 .bottom p {
   font-size: .8rem;
   color: #777;
+  cursor: default;
 }
 .bottom ul {
   display: flex;
 }
 .bottom ul li a {
   margin-right: 20px;
+}
+.lock-scroll {
+  overflow-y: hidden;
+}
+@media screen and (max-width: 820px) {
+  header {
+    background-size: 75%;
+    height: 40vh;
+    background-position-y: top;
+  }
+  .hero {
+    padding: 90px 50px 0 50px;
+  }
+  .hero h1 {
+    font-size: 3rem;
+    line-height: 60px;
+  }
+  .hero p {
+    width: 35%;
+    margin: 20px 0;
+  }
+  .hero button {
+    margin-top: 0 
+  }
+  nav {
+    width: 100%;
+    position: fixed;
+    height: 60px;
+    justify-content: space-between;
+    background: rgba(255, 255, 255, 0);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+  }
+  nav ul {
+    position: fixed;
+    flex-direction: column;
+    height: 100vh;
+    padding: 10px;
+    width: 50%;
+    top: 60px;
+    left: -408px;
+    background: rgba(255, 255, 255, 1);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    z-index: 1;
+    transition: .3s ease;
+  }
+  nav ul.active {
+    left: -20px;
+  }
+  nav ul li {
+    margin-bottom: 20px;
+    padding: 20px;
+  }
+  nav ul li a {
+    font-size: 2rem;
+  }
+  .burger {
+    display: block;
+  }
+  .card-container .card {
+    margin: 10px;
+  }
+  .card-container .card:nth-child(1) h4 {
+    margin-bottom: 36px;
+  }
+  .card-container .card p {
+    font-size: .5rem;
+  }
+  #about {
+    height: 40vh;
+  }
+  #about .about-wrapper img {
+    width: 350px;
+  }
+  .about-wrapper h2 {
+    width: 80%;
+    margin-bottom: 10px;
+    font-size: 1.6rem;
+    line-height: 30px;
+  }
+  .about-content p:nth-child(3) {
+    width: 90%;
+    margin-bottom: 10px;
+    font-size: .7rem;
+    font-weight: 500;
+  }
+  .about-content p:nth-child(4) {
+    width: 90%;
+    font-size: .5rem;
+    font-weight: 400;
+    margin-bottom: 10px;
+  }
+  #services {
+    height: 100vh;
+  }
+  .services-wrapper {
+    width: 75%;
+    flex-direction: column;
+    align-items: center;
+  }
+  .services-card {
+    margin-left: 0;
+    justify-content: center;
+  }
+  .side-card {
+    margin: 0;
+    width: 490px;
+  }
+  .side-card img {
+    width: 490px;
+    border-radius: 10px 10px 0 0;
+  }
+  #team {
+    height: 55vh;
+  }
+  .team-wrapper .card {
+    width: 250px;
+    height: 325px;
+  }
+  .team-wrapper .card img {
+    width: 150px
+  }
+  #quote {
+    height: 45vh;
+  }
+  .quote-wrapper .card {
+    width: 350px;
+    height: 300px;
+  }
+  .quote-wrapper .card i {
+    margin: 10px 0 5px 20px;
+    font-size: 2rem;
+  }
+  .quote-wrapper .card i::after {
+    width: 70px;
+    height:70px;
+    top: -20px;
+    left: -23px;
+  }
+  .quote-wrapper .card p {
+    font-size: .7rem;
+    line-height: 25px;
+  }
+  .quote-wrapper .card .profile {
+    margin-top: 0;
+  }
+  .quote-wrapper .card .profile img {
+    width: 50px;
+    border: 2px solid #E65924;
+  }
+  .quote-wrapper .card .profile h5 {
+    font-size: 1rem;
+  }
+  .quote-wrapper .card .profile p {
+    margin-top: 5px;
+  }
+  #contact {
+    height: 75vh;
+  }
+  :is(input, textarea) {
+    border: 1px solid #000;
+    border-radius: 2px;
+  }
 }
