--- a/style.css
+++ b/style.css
@@ -84,6 +84,9 @@ nav button:hover {
   height: 50vh;
   padding: 40px 50px 0 50px;
 }
+.hero img {
+  display: none;
+}
 .hero h1 {
   width: 40%;
   right: 20px;
@@ -789,5 +792,128 @@ footer {
   :is(input, textarea) {
     border: 1px solid #000;
     border-radius: 2px;
+  }
+}
+@media screen and (max-width: 600px) {
+  body {
+    overflow-x: hidden;
+  }
+  header {
+    height: 100vh;
+    background-position-y: top;
+    background-size: 100%;
+    background: none;
+  }
+  nav ul.active {
+    left: 0;
+  }
+  nav ul li a {
+    font-size: 1.2rem;
+  }
+  nav button {
+    padding: 6px 30px;
+  }
+  .hero {
+    padding: 0;
+  }
+  .hero-wrapper {
+    display: flex;
+    flex-direction: column;
+    padding: 30px 50px;
+  }
+  .hero h1 {
+    width: 100%;
+  }
+  .hero p {
+    width: 100%;
+  }
+  .hero img {
+    display: block;
+    width: 100%;
+  }
+  .card-container {
+    justify-content: start;
+  }
+  .navigasi {
+    margin: 10px 0;
+  }
+  #about {
+    height: 100vh;
+    padding: 0 30px;
+  }
+  .about-wrapper {
+    flex-direction: column;
+  }
+  .about-wrapper h2 {
+    width: 100%;
+    font-size: 2.6rem;
+    line-height: 47px;
+  }
+  #about .about-wrapper img {
+    width: 100%;
+    margin-right: 0;
+  }
+  .about-content {
+    display: flex;
+    flex-direction: column;
+  }
+  .about-content p:nth-child(3) {
+    margin: 20px 0;
+    font-size: 1rem;
+  }
+  .about-content p:nth-child(4) {
+    margin-bottom: 20px;
+    font-size: .8rem;
+  }
+  #services {
+    height: 110vh;
+    padding: 0 25px;
+  }
+  .services-wrapper {
+    width: 100%;
+  }
+  .services-card {
+    width: 100%;
+    height: 200px;
+    justify-content: start;
+    flex-wrap: nowrap;
+  }
+  .cards {
+    display: flex;
+    justify-content: start;
+  }
+  .side-card {
+    width: 320px;
+  }
+  .side-card img {
+    width: 320px;
+  }
+  #team {
+    height: 160vh;
+  }
+  .team-wrapper {
+    flex-direction: column;
+  }
+  #quote {
+    height: 120vh;
+    padding: 0 25px;
+  }
+  .quote-wrapper {
+    flex-direction: column;
+  }
+  #contact {
+    height: 70vh;
+  }
+  footer {
+    padding: 0 40px 20px 40px;
+  }
+  .top i {
+    margin-left: 30px;
+  }
+  .bottom ul {
+    flex-direction: column;
+  }
+  form input, form textarea {
+    width: 74%;
   }
 }
