--- a/style.css
+++ b/style.css
@@ -799,7 +799,8 @@ footer {
   }
 }
 @media screen and (max-width: 600px) {
-  body {
+  html, body {
+    max-width: 100%;
     overflow-x: hidden;
   }
   header {
