--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header {
   position: relative;
   width: 100%;
   height: 100vh;
-  background: url(../img/bg-01.png);
+  background: url(img/bg-01.png);
   background-repeat: no-repeat;
   background-size: 75%;
   background-position-x: right;
