--- a/login.css
+++ b/login.css
@@ -7,7 +7,7 @@
   scroll-behavior: smooth;
   color: #111;
   font-family: 'Poppins', 'sans-serif';
-  overflow: hidden;
+  overflow-x: hidden;
 }
 .container {
   width: 100%;
